--- a/index.html
+++ b/index.html
@@ -2,120 +2,320 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy - Numbies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Numbies - Privacy Policy</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
-            margin: 40px;
-            max-width: 900px;
+            color: #333;
+            background-color: #f5f5f5;
         }
-        h1, h2 {
-            color: #222;
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            min-height: 100vh;
         }
+
+        header {
+            background-color: #2c5f2d;
+            color: #fff;
+            padding: 2rem 1.5rem;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 2rem;
+            margin-bottom: 0.5rem;
+        }
+
+        header p {
+            font-size: 1.1rem;
+            opacity: 0.9;
+        }
+
+        main {
+            padding: 2rem 1.5rem;
+        }
+
+        h2 {
+            color: #2c5f2d;
+            font-size: 1.5rem;
+            margin-top: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        h2:first-child {
+            margin-top: 0;
+        }
+
         p {
-            color: #444;
+            margin-bottom: 1rem;
+            font-size: 1rem;
         }
+
         ul {
-            margin-left: 20px;
+            margin-bottom: 1rem;
+            padding-left: 2rem;
         }
-        .footer {
-            margin-top: 40px;
-            font-size: 0.9em;
+
+        li {
+            margin-bottom: 0.5rem;
+        }
+
+        .effective-date {
+            background-color: #f0f7f0;
+            padding: 1rem;
+            border-left: 4px solid #2c5f2d;
+            margin-bottom: 2rem;
+            font-style: italic;
+        }
+
+        .highlight-box {
+            background-color: #e8f5e9;
+            padding: 1.5rem;
+            border-radius: 8px;
+            margin: 2rem 0;
+            border: 2px solid #2c5f2d;
+        }
+
+        .highlight-box h3 {
+            color: #2c5f2d;
+            margin-bottom: 1rem;
+            font-size: 1.2rem;
+        }
+
+        .highlight-box p {
+            margin-bottom: 0.5rem;
+        }
+
+        footer {
+            background-color: #f5f5f5;
+            padding: 2rem 1.5rem;
+            text-align: center;
             color: #666;
+            font-size: 0.9rem;
+            border-top: 1px solid #ddd;
+        }
+
+        a {
+            color: #2c5f2d;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        strong {
+            color: #2c5f2d;
+        }
+
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 1.5rem;
+            }
+
+            header p {
+                font-size: 1rem;
+            }
+
+            main {
+                padding: 1.5rem 1rem;
+            }
+
+            h2 {
+                font-size: 1.3rem;
+            }
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>🌲 Numbies</h1>
+            <p>Privacy Policy</p>
+        </header>
 
-<h1>Privacy Policy</h1>
+        <main>
+            <div class="effective-date">
+                <strong>Effective Date:</strong> February 15, 2026<br>
+                <strong>Last Updated:</strong> February 15, 2026
+            </div>
 
-<p><strong>App Name:</strong> Numbies</p>
-<p><strong>Developer:</strong> GoopDev</p>
-<p><strong>Last Updated:</strong> February 2026</p>
+            <div class="highlight-box">
+                <h3>🔒 Your Privacy in a Nutshell</h3>
+                <p><strong>We do NOT collect, transmit, or store ANY of your data.</strong></p>
+                <p>All your tree planting records, crew information, and reports stay entirely on your device. No servers, no cloud storage, no tracking, no analytics.</p>
+            </div>
 
-<h2>Overview</h2>
-<p>
-Numbies is designed to respect your privacy. This application does not collect, store, or transmit personal user data.
-This privacy policy explains what information is (and is not) collected and how the app operates.
-</p>
+            <h2>1. Introduction</h2>
+            <p>
+                Numbies ("we", "our", or "the App") is committed to protecting your privacy. This Privacy Policy explains how we handle data in our tree planting operations management application.
+            </p>
 
-<h2>Information Collection</h2>
-<p>
-Numbies does <strong>not</strong> collect any personal information, including but not limited to:
-</p>
-<ul>
-    <li>Names</li>
-    <li>Email addresses</li>
-    <li>Phone numbers</li>
-    <li>Location data</li>
-    <li>Device identifiers</li>
-    <li>IP addresses</li>
-    <li>Usage behavior</li>
-</ul>
+            <h2>2. Data Collection - What We DON'T Collect</h2>
+            <p>
+                <strong>We do not collect any personal information or usage data.</strong> Specifically, we do not collect:
+            </p>
+            <ul>
+                <li>Personal identification information (names, email addresses, phone numbers)</li>
+                <li>Device information or unique identifiers</li>
+                <li>Location data or GPS coordinates</li>
+                <li>Usage statistics or analytics</li>
+                <li>Crash reports or error logs</li>
+                <li>Any data about how you use the App</li>
+                <li>Any information about crew members you enter into the App</li>
+                <li>Any tree planting data, reports, or statistics</li>
+            </ul>
 
-<h2>Accounts and Authentication</h2>
-<p>
-Numbies does not support user accounts, profiles, or login systems.
-</p>
+            <h2>3. Local Data Storage</h2>
+            <p>
+                All data you create in the App is stored locally on your device using React Native AsyncStorage. This includes:
+            </p>
+            <ul>
+                <li>Crew member names and statistics</li>
+                <li>Block information and seedlot configurations</li>
+                <li>Daily planting reports and tree counts</li>
+                <li>Box tracking data</li>
+                <li>App settings and preferences</li>
+                <li>Historical statistics and charts</li>
+            </ul>
+            <p>
+                <strong>This data never leaves your device</strong> unless you explicitly export it using the backup functionality.
+            </p>
 
-<h2>Data Storage</h2>
-<p>
-Numbies does not store user data locally or remotely on any servers.
-</p>
+            <h2>4. How Your Data Is Used</h2>
+            <p>
+                Your data is used solely for the App's functionality on your device:
+            </p>
+            <ul>
+                <li>Tracking daily tree planting activities</li>
+                <li>Calculating crew member earnings and statistics</li>
+                <li>Generating PDF and Excel reports</li>
+                <li>Creating charts and visualizations</li>
+                <li>Managing block and seedlot information</li>
+                <li>Tracking box usage for overclaim analysis</li>
+            </ul>
+            <p>
+                Since all processing happens locally on your device, your data is never transmitted to external servers or third parties.
+            </p>
 
-<h2>Analytics</h2>
-<p>
-Numbies does not use third-party analytics services.
-</p>
-<p>
-Google Play may collect anonymous technical information for app distribution and performance monitoring as part of its standard platform services. This data is governed by Google's own privacy policy.
-</p>
+            <h2>5. Data Sharing</h2>
+            <p>
+                <strong>We do not share your data with anyone.</strong> There are no third-party analytics services, advertising networks, or data processors involved. The App operates completely offline and does not require an internet connection (except for optional features like accessing the feedback form or these legal pages).
+            </p>
 
-<h2>Advertising</h2>
-<p>
-Numbies does not display advertisements and does not integrate any advertising SDKs.
-</p>
+            <h2>6. Data Export and Backup</h2>
+            <p>
+                The App provides a backup feature that allows you to export your data to a JSON file stored in your device's Downloads folder. This backup file:
+            </p>
+            <ul>
+                <li>Is created only when you explicitly choose to back up your data</li>
+                <li>Remains on your device unless you manually share or transfer it</li>
+                <li>Is not automatically uploaded to any cloud service</li>
+                <li>Can be used to restore your data if you reinstall the App</li>
+            </ul>
+            <p>
+                If you choose to share backup files via email, cloud storage, or other means, you are responsible for the security and privacy of that data.
+            </p>
 
-<h2>Internet Access</h2>
-<p>
-At this time, Numbies does not use internet connectivity for any functionality.
-</p>
-<p>
-If future versions of the app introduce online features, this privacy policy will be updated accordingly.
-</p>
+            <h2>7. PDF and Excel Reports</h2>
+            <p>
+                When you generate PDF or Excel reports, these files are created locally on your device. If you choose to share these reports using the built-in share functionality, they are sent through your device's standard sharing mechanism. We do not have access to or control over how you share these reports.
+            </p>
 
-<h2>Third-Party Libraries</h2>
-<p>
-Numbies uses React-based libraries strictly for application functionality. No third-party SDKs are used for data collection, tracking, or advertising.
-</p>
+            <h2>8. Internet Permissions</h2>
+            <p>
+                The App may request internet access for the following optional features only:
+            </p>
+            <ul>
+                <li>Opening the feedback form in your web browser</li>
+                <li>Accessing these Terms of Service and Privacy Policy pages</li>
+            </ul>
+            <p>
+                No data is transmitted to our servers or any third-party servers through these connections.
+            </p>
 
-<h2>Children’s Privacy</h2>
-<p>
-Numbies does not knowingly collect any personal information from children or users of any age.
-</p>
+            <h2>9. Data Security</h2>
+            <p>
+                Since all data is stored locally on your device, the security of your data depends on your device's security measures. We recommend:
+            </p>
+            <ul>
+                <li>Using a secure lock screen on your device</li>
+                <li>Keeping your device's operating system updated</li>
+                <li>Regularly backing up your data</li>
+                <li>Being cautious when sharing backup files or reports</li>
+            </ul>
 
-<h2>Changes to This Policy</h2>
-<p>
-This privacy policy may be updated in the future to reflect changes in functionality or legal requirements.
-Any updates will be posted on this page.
-</p>
+            <h2>10. Data Retention and Deletion</h2>
+            <p>
+                You have complete control over your data:
+            </p>
+            <ul>
+                <li><strong>Delete individual reports:</strong> Deleted reports are moved to a Recycling Bin where they can be restored or permanently deleted</li>
+                <li><strong>Archive crew members:</strong> Crew members can be archived to hide them from active lists while preserving historical data</li>
+                <li><strong>Delete all data:</strong> The "Delete All Data" option in Settings permanently removes all information from the App</li>
+                <li><strong>Uninstall the App:</strong> Uninstalling the App will delete all locally stored data (unless you have created backups in your Downloads folder)</li>
+            </ul>
 
-<h2>Contact</h2>
-<p>
-If you have any questions about this privacy policy, you may contact the developer at:
-</p>
-<p>
-<strong>Developer Name:</strong> GoopDev<br>
-<strong>App Name:</strong> Numbies
-</p>
+            <h2>11. Children's Privacy</h2>
+            <p>
+                The App is not specifically directed at children under 13. We do not knowingly collect personal information from children. Since we don't collect any data at all, this policy applies universally to all users regardless of age.
+            </p>
 
-<div class="footer">
-<p>
-This privacy policy applies only to the Numbies application developed by GoopDev.
-</p>
-</div>
+            <h2>12. Your Rights</h2>
+            <p>
+                Because all data is stored locally on your device and we do not collect or transmit any information, you automatically have:
+            </p>
+            <ul>
+                <li><strong>Full ownership:</strong> You own all data you create in the App</li>
+                <li><strong>Complete access:</strong> All your data is always accessible within the App</li>
+                <li><strong>Export rights:</strong> You can export your data at any time using the backup feature</li>
+                <li><strong>Deletion rights:</strong> You can delete any or all data at any time</li>
+                <li><strong>Portability:</strong> Backup files are in JSON format and can be used outside the App</li>
+            </ul>
 
+            <h2>13. Third-Party Services</h2>
+            <p>
+                The App does not integrate with any third-party services, analytics platforms, advertising networks, or social media services. The only external links are:
+            </p>
+            <ul>
+                <li>The feedback form (Google Forms) - optional, user-initiated</li>
+                <li>These legal documents (GitHub Pages) - optional, user-initiated</li>
+            </ul>
+
+            <h2>14. Changes to This Privacy Policy</h2>
+            <p>
+                We may update this Privacy Policy from time to time. If we make changes, we will update the "Last Updated" date at the top of this page. Continued use of the App after changes constitutes acceptance of the updated Privacy Policy.
+            </p>
+            <p>
+                Since we don't collect your contact information, we cannot notify you directly of changes. We recommend reviewing this page periodically.
+            </p>
+
+            <h2>15. Contact Us</h2>
+            <p>
+                If you have questions about this Privacy Policy or how your data is handled, please contact us through the Feedback & Bug Reports form available in the App's Settings screen, or visit: <a href="https://forms.gle/qG7uDQ4mpgrusVRu5" target="_blank">https://forms.gle/qG7uDQ4mpgrusVRu5</a>
+            </p>
+
+            <h2>16. Consent</h2>
+            <p>
+                By using the App, you consent to this Privacy Policy and agree that all data you create will be stored locally on your device under your control.
+            </p>
+        </main>
+
+        <footer>
+            <p>&copy; 2026 Numbies. All rights reserved.</p>
+            <p><a href="numbies-tos.html">Terms of Service</a> | <a href="https://forms.gle/qG7uDQ4mpgrusVRu5" target="_blank">Contact Us</a></p>
+        </footer>
+    </div>
 </body>
 </html>
