--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
         <footer>
             <p>&copy; 2026 Numbies. All rights reserved.</p>
-            <p><a href="https://ryancc3.github.io/numbies-tos.html">Terms of Service</a> | <a href="https://forms.gle/qG7uDQ4mpgrusVRu5" target="_blank">Contact Us</a></p>
+            <p><a href="https://ryancc3.github.io/numbies-tos">Terms of Service</a> | <a href="https://forms.gle/qG7uDQ4mpgrusVRu5" target="_blank">Contact Us</a></p>
         </footer>
     </div>
 </body>
